# FILM

./: Cargo.toml  README.md  build.rs  data.json  settings.json
assets/: dngfilm.icns
dnglab-lib/: Cargo.toml
rawler/: Cargo.toml
rawler/data/cameras/canon/: 250d.toml
src/: convert.rs  data_manager.rs  exif_process.rs  img_processing.rs  main.rs  manage_cache.rs  new_lens.rs  remove_lens.rs  settings.rs  show_preview.rs
ui/: Components.slint  Main.slint  NewLens.slint  Remove.slint  Settings.slint  app-window.slint
