[package]
name = "DNGFilm"
version = "2.0.0"
edition = "2024"
build = "build.rs"

[package.metadata.bundle]
name = "DNGFilm"
identifier = "com.dngfilm.dngfilm.ui"
icon = ["assets/icon.icns"]


[dependencies]

slint = "1.12.1"
rfd = "0.15"
shared-string = "0.1"

dnglab = { package = "dnglab_lib", path = "./dnglab-lib" }
rawler = { path = "./rawler" }
anyhow = "1.0" 
tokio = { version = "1", features = ["full"] }

zip = "0.6"


[build-dependencies]
slint-build = "1.12.1"

[package.metadata.slint]
style = "cupertino"
